# payday-scheduler

./: README.md  app.py  conftest.py  pyproject.toml  salary_calculation.py
.cursor/rules/: pytest-run.mdc
tests/: test_payday_schedule.py  test_salary_calculation.py
